--- a/flkbnfgln.html
+++ b/flkbnfgln.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <script>
-    let a = prompt('')
+    let a =+ prompt('');
+    let b =+ prompt('');
+    let total = a + b;
+    alert(total)
 </script>
 </body>
 </html>
